syntax = "proto3";

package pb;

service CalculateService{
  rpc Calculate(CalculateRequest) returns (CalculateResponse){}
}

message CalculateRequest {
  string requestType = 1;
  int32 a = 2;
  int32 b = 3;
}

message CalculateResponse {
  int32 result = 1;
  string err = 2;
}